--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.layer.quickstart"
-        minSdkVersion 19
-        targetSdkVersion 20
+        applicationId "com.layer.quick_start_android"
+        minSdkVersion 14
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -21,12 +21,20 @@ android {
 
 repositories {
     maven { url "https://raw.githubusercontent.com/layerhq/releases-android/master/releases/" }
+
+    mavenCentral()
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.layer.sdk:layer-sdk:0.8.5'
-    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile "com.layer.sdk:layer-sdk:0.8.10"
+
+    // JAR
+    /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
+    // compile files('../../layer-android-sdk/sdk/build/libs/sdk-0.8.11.jar')
+    /* 2: Use the following line to refer to a maven JAR */
+    //compile "com.layer.sdk:layer-sdk:0.8.9@jar"
+    compile "com.google.android.gms:play-services-base:6.5.+"
+    compile "org.slf4j:slf4j-log4j12:1.7.6"
 }
-
-
