--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile "com.layer.sdk:layer-sdk:0.8.10"
+    compile "com.layer.sdk:layer-sdk:0.8.+"
 
     // JAR
     /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
