--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,15 @@ repositories {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile "com.layer.sdk:layer-sdk:0.8.+"
+
+    // JAR
+    /* 1: Use the following line to refer to a locally-built JAR, e.g. `gradle fatJarDebug` */
+    // compile files('../../layer-android-sdk/sdk/build/libs/sdk-0.8.11.jar')
+    /* 2: Use the following line to refer to a maven JAR */
+    ////compile "com.layer.sdk:layer-sdk:0.8.9@jar"
+    //compile "com.google.android.gms:play-services-base:6.5.+"
+    //compile "org.slf4j:slf4j-log4j12:1.7.6"
 }
