Upgraded to SDK 0.9.+
- Migrated code from 0.8.+ conventions to 0.9.+ conventions
- Added query to find latest conversation
- Added LayerPushReceiver and Notification support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ repositories {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile "com.layer.sdk:layer-sdk:0.8.+"
+    compile "com.google.android.gms:play-services-base:6.5.+"
+    compile "com.layer.sdk:layer-sdk:0.9.+"
 }
