--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,6 @@ repositories {
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.google.android.gms:play-services-gcm:+'
-    compile 'com.layer.sdk:layer-sdk:0.11.+'
+    compile 'com.layer.sdk:layer-sdk:0.13.0'
     compile 'org.slf4j:slf4j-api:1.7.7'
 }
