--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.layer.quick_start_android"
@@ -26,7 +27,7 @@ repositories {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:+'
-    compile 'com.google.android.gms:play-services-gcm:+'
-    compile 'com.layer.sdk:layer-sdk:0.15.0'
+    compile 'com.google.android.gms:play-services-gcm:7.5.0'
+    compile 'com.layer.sdk:layer-sdk:0.17.1'
     compile 'org.slf4j:slf4j-api:1.7.7'
 }
